--- a/lib/bolon_web/templates/market/index.html.eex
+++ b/lib/bolon_web/templates/market/index.html.eex
@@ -5,7 +5,7 @@
       <p>Bolon's spectral power is too important for worldly concerns like the markets so your pal <strong>Beren the Bargain Bear</strong> is here to help you navigate the city's markets in search of the week's best deals. We got some real <em>bear</em>ied treasures here.</p>
       <p>🔥 Some deals are just too hot to pass up - these are some <strong><em>grrrrr</em>eat buys</strong>! I make sure you can't miss em! 🔥<br />
          🦡 And if a deal is some real garbage? Look out for the <strong>Bad Deal Badger</strong> - these badgers are bad news! 🦡</p>
-      <p>Bolon appeared in a dream and told me these deals "<strong>update Mondays at midnight UTC</strong>" - maybe that means something to you? 🤷🏾‍♀️🤷🏾‍♀️🤷🏾‍♀️ All I know is that I unlikely to awaken from my next hibernation if I don't tell you that.</p>
+      <p>Bolon appeared in a dream and told me these deals "<strong>update Mondays at midnight UTC</strong>" - maybe that means something to you? 🤷🏾‍♀️🤷🏾‍♀️🤷🏾‍♀️ All I know is that I am unlikely to awaken from my next hibernation if I don't tell you that.</p>
       <p>May you find <strong>Bolon's Delight</strong> at the markets this week!</p>
     </div>
   </div>
